# QuantumVisualizer

./: .gitmodules  CMakeLists.txt  LICENSE  Outline.md  QuantumVisualizer.files  QuantumVisualizer.includes  QuantumVisualizer.kdev4  README  README.md
.cache/clangd/index/: GnuplotPipe.h.803D116A7A4A2A53.idx  Hamiltonian.cpp.328D67B419DC8BB4.idx  Hamiltonian.h.833A2F04553142D4.idx  Potential.cpp.3508702A7C6186D7.idx  Potential.h.1473148D8D42ED2F.idx  lambda_lanczos.hpp.C5B88B33CC8E380A.idx  lambda_lanczos_tridiagonal.hpp.E81D91E75695C83E.idx  linear_algebra.hpp.BE9F642F854F701B.idx  main.cpp.BC1CE21650F8DE4A.idx  quantumvisualizer.cpp.C701552EC9587EAE.idx  quantumvisualizer.h.163E6156DCDCC03F.idx
.kdev4/: QuantumVisualizer.kdev4
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: Box.h.42E9ED85DD0AC1F3.idx  CMakeCCompilerId.c.760EB70FC9A97761.idx  CMakeCXXCompilerId.cpp.58F1B7FEAEFB9EA3.idx  Potential.cpp.3508702A7C6186D7.idx  PotentialSpecifications.cpp.B32B3A78DF525E45.idx  align.h.CA541990FDBB1FB6.idx  (+51 more)
src/: main.cpp
src/controller/: Box.cpp  Box.h  GnuplotPipe.cpp  GnuplotPipe.h
src/model/: BasisWavefunction.cpp  BasisWavefunction.h  Hamiltonian.cpp  Hamiltonian.h  Potential.cpp  Potential.h  SchrodingerEquation.cpp  Wavefunction.cpp  Wavefunction.h
src/tests/: QuantumVisualizerTest.cpp
src/view/: CentralWidget.h  PotentialSpecifications.cpp  PotentialSpecifications.h  SubmitButton.cpp  SubmitButton.h  drawArea.cpp  drawArea.h  quantumvisualizer.cpp  quantumvisualizer.h  quantumvisualizer.ui  quantumvisualizer.ui.autosave
